# volcatenate

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  README.md  conf.py  config_options.md  config_propagation.md  configuration.md  getting_started.md  index.md  references.md  requirements.txt  run_bundles.md  sample_data.md
docs/api/: index.rst
docs/examples/: full_config.ipynb  minimal_config.ipynb
docs/gallery/: index.md
docs/papers/: README.md
examples/: default_config.yaml  example_config.yaml  example_degassing_input.csv  example_satP_input.csv  run_full_comparison.py  volcatenate_config_complete.yaml
resolved_inputs/MORB/: VolFe.yaml
src/volcatenate/: __init__.py  cli.py  columns.py  compat.py  composition.py  config.py  convert.py  core.py  default_config.yaml  iron.py  log.py  plotting.py  progress.py  reproducible.py  resolved_inputs.py  result.py  versions.py
src/volcatenate/backends/: __init__.py  _base.py  dcompress.py  evo.py  magec.py  sulfurx.py  vesical.py  volfe.py
src/volcatenate/converters/: __init__.py  dcompress_converter.py  evo_converter.py  magec_converter.py  sulfurx_converter.py  vesical_converter.py  volfe_converter.py
src/volcatenate/data/magec_shims/: fsolve.m  lsqnonlin.m  optimoptions.m
src/volcatenate/data/magec_solver/: MAGEC_CSV_Wrapper.m
tests/: README.md  SulfurX_Fuego_wCrystallization.csv  conftest.py  sulfurx_wCrystallization_config.yaml  test_bugfixes.py  test_cs_ratio.py  test_gotchas.py  test_integration.py  test_magec_black_box.py  test_magec_converter.py  test_overrides.py  test_reproducible.py  test_sulfurx_config.py  test_sulfurx_montecarlo.py  test_sulfurx_path_resolution.py  test_units.py
