[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "volcatenate"
version = "0.4.0"
description = "Unified volcanic degassing model comparison toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pyyaml",
    "click",
    "openpyxl",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
plotting = ["matplotlib", "plotly"]

[project.scripts]
volcatenate = "volcatenate.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: requires external library (EVo, VolFe, VESIcal, SulfurX, or MAGEC)",
]
filterwarnings = [
    # SulfurX's residual functions handed to scipy.optimize.root probe
    # infeasible regions (negative pressures, zero mole fractions) during
    # iteration — numpy emits RuntimeWarnings ("invalid value in scalar
    # power", "invalid value in log") for the NaN intermediates.  The
    # solver discards them and converges to a valid answer; the wrapper's
    # own NaN guard at backends/sulfurx.py catches the rare case where
    # NaN survives convergence.  Suppress just these two known-noisy
    # SulfurX modules so the pytest summary stays useful for surfacing
    # warnings from our own code or other backends.
    "ignore::RuntimeWarning:Iacono_Marziano_COH",
    "ignore::RuntimeWarning:sulfur_fO2_degassing_test",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
volcatenate = ["default_config.yaml", "data/magec_shims/*.m", "data/magec_solver/*.m"]
